--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./lib/css/style.css">
     <script src="./lib/js/vue.min.js"></script>
     <script src="./lib/js/vue.js"></script>
-    <script src="./lib/js/main.js"></script>
     <title>To-Do-App</title>
 </head>
 <body>
@@ -43,6 +42,42 @@
             <li v-for="aufgabe in erledigt">{{aufgabe.beschreibung}}</li>    
         </ul>
     </div>
+    <script>
+        var app = new Vue({
+    el: "#aufgabenApp",
+       data: {
+          aufgaben: [
+          {beschreibung: "Aufstehen", fertig: true},
+          {beschreibung: "Sport", fertig: false},
+          {beschreibung: "Meditation", fertig: false},
+          {beschreibung: "Mails", fertig: false},
+          {beschreibung: "Daten sichern", fertig: false},
+          {beschreibung: "Ordnung machen", fertig: false},
+          ],
+          neueAufgabe: ''
+       },
+       computed: {
+          erledigt() {
+          return this.aufgaben.filter(aufgabe => aufgabe.fertig);
+          },
+          nichterledigt() {
+          return this.aufgaben.filter(aufgabe => !aufgabe.fertig);
+          },
+       },
+       methods: {
+       aufgabeHinzu() {
+       this.aufgaben.push({beschreibung: this.neueAufgabe, fertig: false});
+       this.neueAufgabe = '';
+       },
+       erledigtWechseln(index) {
+          this.aufgaben[index].fertig = !this.aufgaben[index].fertig;
+       },
+       loeschen(index) {
+       this.aufgaben.splice(index, 1);
+       },         
+    },
+ });
+    </script>
 </body>
 </html>
 
